--- a/templates/signup.html
+++ b/templates/signup.html
@@ -7,10 +7,10 @@
     <link href="http://getbootstrap.com/dist/css/bootstrap.min.css" rel="stylesheet">
  
     <link href="http://getbootstrap.com/examples/jumbotron-narrow/jumbotron-narrow.css" rel="stylesheet">
-    <link href="../static/signup.css" rel="stylesheet">
+    <link href="../static/css/signup.css" rel="stylesheet">
 
     <script src="static/js/jquery-1.11.3.min.js"></script>
-    <script src="static/js/helper.js"></script>
+    <script src="static/js/signUp.js"></script>
 
 
   </head>
